responsive image show

--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -30,8 +30,7 @@ layout: default
     </div>
 
 
-  <div class="img-show-wrap">
-    <img class="show" src="/assets/images/image-show.png" alt="">
+  <div class="img-show" style="background: url({{ page.image }}); background-size: contain; background-repeat: no-repeat;">
   </div>
   </div>
 
