--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -40,11 +40,12 @@ td > p {
 }
 .show-footer {
   width: 100%;
-  padding-top: 1em;
+  padding-top: 2em;
   border-top: solid 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
 }
 .show-navigation {
   margin-top: 1em;
