--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  margin-top: 4rem;
+  margin-top: 2rem;
   justify-items: center;
   img{
       border: solid 3px;
@@ -13,12 +13,12 @@
   flex-direction: column;
   align-items: center;
 
-  h2, h3, h4, p {
+  h2, h3, h4, {
     padding: 0 2rem;
     margin: 0.4rem;
   }
   p{
-    padding-top: 1rem;
+    padding: 0.1rem 1rem;
     font-style: italic;
   }
   h2 {
