--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -16,9 +16,11 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   width: 100vw;
-  // overflow: hidden;
   margin: 0;
   object-fit: scale-down;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 h1 {
   font-weight: 900;
@@ -33,6 +35,7 @@ h2{
 }
 h3 {
   font-weight: 900;
+  font-size: 16px;
 }
 h4 {
   font-size: 12px;
@@ -79,9 +82,10 @@ body.default-background {
  text-transform: uppercase;
 }
 .footer {
-  position: absolute;
-  bottom: 0.5rem;
-  right: 2rem;
+    text-align: right;
+    align-self: right;
+    margin-right: 2rem;
+    padding-bottom: 0.5rem;
 }
 a.footer:hover {
   color: $yellow !important;
