--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,27 +1,26 @@
 .header-wrapper {
-  display: block;
+  display: flex;
   margin-bottom: 2em;
   position: relative;
 }
 .logo {
   width: 15rem;
-  position: absolute;
-  left: 4rem;
-  top: 2em;
+  margin-left: 4rem;
+  margin-top: 2em;
 }
 .cta.contact:hover {
   color: $yellow;
 }
 .cta.contact {
-  position: absolute;
-  right: 4rem;
-  top: 4.5rem;
   font-family: Montserrat, sans-serif;
   font-weight: bold;
+  margin-left: 1.5rem;
+  text-align: center;
 }
 .navigation-wrap {
   display: flex;
   justify-content: center;
+  align-items: baseline;
 }
 .navigation {
   margin-top: 5.3rem;
