adjusted responsiveness on facts

--- a/_layouts/facts.html
+++ b/_layouts/facts.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 <div class="facts">
   <div class="left-column-facts">
       <div class="facts-text">
@@ -10,7 +11,7 @@ layout: default
   </div>
 
   <div class="crdc-map">
-    <img class="map" src="/assets/images/CRDC_MAP.png" alt="">
+    <!-- <img class="map" src="/assets/images/CRDC_MAP.png" alt=""> -->
   </div>
 
 </div>
