--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -7,15 +7,21 @@ layout: default
       <div class="story-text">
         <h1 class="center-title">{{ page.story-title }}</h1>
         <p>{{ content }}</p>
+        <!-- <i class="story-arrow fas fa-arrow-down"> -->
       </div>
     </div>
 
 
-  <div class="story-images">
-    <img class="story-image-1" src="/assets/images/story-image-1.jpg" alt="">
-    <img class="story-image-2" src="/assets/images/story-image-2.jpg" alt="">
-    <i class="story-arrow fas fa-arrow-down"></i>
-  </div>
+    <div class="sotry-images-wrap">
+      <div class="story-images">
+
+        <div class="story-image-1">
+        </div>
+        <div class="story-image-2">
+        </div>
+        
+      </div>
+    </div>
 
 
 
