--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,32 +1,45 @@
 .story-wrap {
-  display: flex;
   width: 65%;
+  height: 60%;
   margin: 2rem auto;
   padding: 2rem 4rem;
   background-color: $green;
   border-radius: 2rem;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 .story-text {
   p {
     color: black;
   }
 }
+.story-images-wrap {
+
+}
 .story-images {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 2rem 0 2rem 2rem;
+  // position: relative;
+  // width: 100%;
+  // object-fit: scale-down;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // margin: 2rem 0 2rem 2rem;
 }
-.story-image-1, .story-image-2 {
-  width: 17rem;
-  border: solid 3px;
-}
+
 .story-image-1 {
+  background: url("/assets/images/story-image-1.jpg");
   transform: rotate(14deg);
 }
 .story-image-2 {
+  background: url("/assets/images/story-image-2.jpg");
   transform: rotate(-14deg);
+}
+.story-image-1, .story-image-2 {
+  max-width: 1024px;
+  width: 75%;
+  border: solid 3px;
+  padding-top: 3 / 4 * 75%;
+  background-repeat: no-repeat;
 }
 .story-text-wrap {
   height: 25rem;
