--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="story-wrap">
+  <div class="story-content-wrap">
 
     <div class="story-text-wrap">
       <div class="story-text">
@@ -19,10 +20,11 @@ layout: default
         </div>
         <div class="story-image-2">
         </div>
-        
+
       </div>
     </div>
-
+    
+  </div>
 
 
 </div>
