--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -57,7 +57,7 @@ td > p {
 }
 .button-show {
   margin: 0 5em;
-  padding: 1em 0;
+  padding: 1em 2em;
   background: $yellow;
   color: $blue;
   font-weight: 900;
