--- a/_sass/video.scss
+++ b/_sass/video.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2em;
 }
 iframe.video-show {
   box-shadow: 8px 8px 6px 0 rgba(0,0,0,0.50);
