reorginising header in grid

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,13 @@
 <div class="header-wrapper">
-        <a href="/"><img class="logo block" src="/assets/images/crdc-logo.png" alt=""></a>
-    <div class= "navigation-wrap">
+
+    <a href="/"><img class="logo" src="/assets/images/crdc-logo.png" alt=""></a>
+
+    <div class= "navigation">
       {% include navigation.html %}
+    </div>
+
+    <div class="cta-contact-wrap">
       <a class="cta contact" href="/contact">CONTACT US</a>
     </div>
+
 </div>
