--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -12,6 +12,7 @@ $general: 'Montserrat', sans-serif;
   color: $yellow;
 }
 body {
+  min-height: 829px;
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
