fixed cta breaking

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -15,6 +15,7 @@
   color: $yellow;
 }
 .cta.contact {
+  display: block;
   font-family: Montserrat, sans-serif;
   font-weight: bold;
   margin-left: 1.5rem;
