--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -70,7 +70,7 @@ td > p {
   font-weight: 900;
   text-align: center;
   margin: 0 5em;
-  padding: 1em 0;
+  padding: 1em 2em;
 }
 a.active-button-show:hover {
   color: $yellow;
