--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -5,7 +5,12 @@ $blue: #02509E;
 
 //Fonts
 $general: 'Montserrat', sans-serif;
+$happy: 'Henny-Penny';
 
+@font-face {
+  font-family: 'Henny-Penny';
+  src: url(/assets/fonts/HennyPenny-Regular.woff);
+}
 * {
   box-sizing: border-box;
   font: 100% $general;
