added keywords to home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,16 @@
  {% include head.html %}
 
   <body class="home">
+<div class="content-home">
+        <div class="keywords">
+          <h1 class="keyword">CIRCUS</h1>
+          <h1 class="keyword">RYTHMUS</h1>
+        </div>
 
         <div class="header-home">
 
           <a href="/"><img class="logo-home" src="assets/images/crdc-logo.png" alt=""></a>
+
           <div class="languages">
             <div class="cta"><a class="" href="/the-show">Tell me more...</a></div>
             <div class="cta"><a class="" href="/the-show">Mehr Anzeigen...</a></div>
@@ -14,6 +20,11 @@
 
         </div>
 
+        <div class="keywords">
+          <h1 class="keyword">ACTION</h1>
+          <h1 class="keyword">SHOW</h1>
+        </div>
+</div>
     {% include footer.html %}
 
   </body>
