--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -32,6 +32,8 @@
   justify-content: space-between;
   text-align: center;
   align-items: center;
+  justify-self: center;
+  align-self: center;
   width: max-content;
 }
 
@@ -40,6 +42,7 @@
   margin: 0 1.5em;
   font-size: 18px;
   white-space: nowrap;
+  padding-top: 0.8em;
 }
 .menu-item.active {
 font-size: 23px;
@@ -48,4 +51,19 @@ text-decoration: underline;
 }
 a.menu-item:hover {
   color: $yellow;
+}
+//Header mobile
+.bg-light {
+  background-color: rgba(0,0,0, 0) !important;
+}
+//Header
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(250,240,118, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: $yellow;
+  text-align: center;
+  display: flex;
+  margin: 0 auto;
 }
