--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,500i,700,900" rel="stylesheet">
     <link rel="script" href="/css/master.css">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   </head>
