messing with navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,13 +6,17 @@
     <div class="navbar-nav">
       {% for item in site.data.navigation %}
         {% if page.url contains item.link %}
+          <div class="menu-item">
             <a class="menu-item active" href="{{ item.link }}">
               {{ item.name }}
             </a>
+          </div>
         {% else %}
+          <div class="menu-item">
             <a class="menu-item" href="{{ item.link }}">
               {{ item.name }}
             </a>
+          </div>
         {% endif %}
       {% endfor %}
     </div>
