--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,500i,700,900" rel="stylesheet">
     <link rel="script" href="/css/master.css">
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#49927c",
+          "text": "#faf076"
+        },
+        "button": {
+          "background": "#faf076",
+          "text": "#49927c"
+        }
+      },
+      "content": {
+        "href": "www.crazy-rumble.info/impressum"
+      }
+    })});
+    </script>
   </head>
