--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -89,6 +89,7 @@ body.default-background {
  text-align: center;
  padding: 0.5rem 1.2rem;
  text-transform: uppercase;
+ white-space: nowrap;
 }
 .footer {
     text-align: right;
