--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -14,7 +14,7 @@
   display: block;
   font-family: Montserrat, sans-serif;
   font-weight: bold;
-  margin-left: 1.5rem;
+  margin: 0 1.5rem;
   text-align: center;
 }
 .cta-contact-wrap {
