--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="video-wrap">
-  <iframe class="video-show"width="900" height= "500" src="{{ page.video-link }}?rel=0;&autoplay=1" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
+  <iframe class="video-show" src="{{ page.video-link }}?rel=0;&autoplay=1" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
 </div>
 
 {% include navigation-show.html%}
