go ahead with IPAD responsiveness

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,14 @@
-<div class="header-wrapper">
+<div class="header-wrap">
 
-    <a href="/"><img class="logo" src="/assets/images/crdc-logo.png" alt=""></a>
+      <a href="/"><img class="logo" src="/assets/images/crdc-logo.png" alt=""></a>
 
-    <div class= "navigation">
-      {% include navigation.html %}
-    </div>
+      <div class= "navigation">
+        {% include navigation.html %}
+      </div>
 
-    <div class="cta-contact-wrap">
-      <a class="cta contact" href="/contact">CONTACT US</a>
-    </div>
+      <div class="cta-contact-wrap">
+        <a class="cta contact" href="/contact">CONTACT US</a>
+      </div>
 
+  </div>
 </div>
