--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,6 +1,6 @@
 .story-wrap {
   width: 65%;
-  height: 60%;
+  height: min-content;
   margin: 2rem auto;
   padding: 2rem 4rem;
   background-color: $green;
