--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -1,5 +1,10 @@
 // Tablet
 @media screen and (max-width: 768px) {
+  //Universal
+  .cta.contact {
+    justify-self: start;
+    align-self: start;
+  }
   //Home
   .keyword {
     display: none;
@@ -18,7 +23,34 @@
     width: 30%;
     grid-row-gap: 1em;
   }
-
+  //story
+  .story-content-wrap {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .story-images {
+    flex-direction: row;
+    width: 15rem;
+  }
+  .story-text {
+    margin-top: 2rem;
+  }
+  .story-image-2 {
+    display: none;
+  }
+  .story-image-1 {
+    transform: rotate(-14deg);
+  }
+  //Facts
+  .facts {
+    margin-top: 2rem;
+    grid-template-columns: 80%;
+    justify-content: center;
+  }
+  .crdc-map {
+    grid-row-start: 1;
+    margin-top: 0;
+  }
 }
 @media screen and (min-width: 992px) {
   .navbar-toggler {
