font for slogan show

--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -46,6 +46,11 @@ td > p {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+
+  h1{
+    font: 100% $happy;
+    font-size: 30px;
+  }
 }
 .show-navigation {
   margin-top: 1em;
