cta home alignment

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -24,7 +24,7 @@ body.home {
 .languages {
   display: flex;
   flex-direction: row;
-  margin-top: 1.8em;
+  margin: 2rem;
 }
 .languages > .cta {
   margin: 0 2rem;
