--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,8 @@
           <a href="/"><img class="logo-home" src="assets/images/crdc-logo.png" alt=""></a>
 
           <div class="languages">
-            <div class="cta"><a class="" href="/the-show">Tell me more...</a></div>
-            <div class="cta"><a class="" href="/the-show">Mehr Anzeigen...</a></div>
+            <div class="cta"><a class="" href="{{ baseurl }}/the-show">Tell me more...</a></div>
+            <div class="cta"><a class="" href="{{ baseurl }}/the-show">Mehr Anzeigen...</a></div>
           </div>
 
         </div>
