--- a/_includes/navigation-show.html
+++ b/_includes/navigation-show.html
@@ -6,11 +6,11 @@
 
     {% for item in site.data.navigation-show %}
       {% if page.url == item.link %}
-        <a class="active-button-show" href="{{ item.link }}">{{ item.name }}</a>
+        <a class="active-button-show" href="{{ item.link | relative_url }}">{{ item.name }}</a>
 
         {% else %}
 
-        <a class="button-show" href="{{ item.link }}">{{ item.name }}</a>
+        <a class="button-show" href="{{ item.link | relative_url }}">{{ item.name }}</a>
       {% endif %}
     {% endfor %}
 
