--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,11 +11,11 @@
 
         <div class="header-home">
 
-          <a href="/"><img class="logo-home" src="assets/images/crdc-logo.png" alt=""></a>
+          <a href={{ "/" | relative_url }}><img class="logo-home" src={{ "assets/images/crdc-logo.png" | relative_url }} alt=""></a>
 
           <div class="languages">
-            <div class="cta"><a class="" href="{{ site.baseurl }}/the-show">Tell me more...</a></div>
-            <div class="cta"><a class="" href="{{ site.baseurl }}/the-show">Mehr Anzeigen...</a></div>
+            <div class="cta"><a class="" href={{ "/the-show" | relative_url }}>Tell me more...</a></div>
+            <div class="cta"><a class="" href={{ "/the-show" | relative_url }}>Mehr Anzeigen...</a></div>
           </div>
 
         </div>
