--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -4,7 +4,7 @@ layout: default
 
   <div class="team">
     <div class="berta person">
-      <img src="/assets/images/avatar-berta.png" alt="">
+      <img src={{ "/assets/images/avatar-berta.png" | relative_url }} alt="">
       <h2>Berta Del Ben</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
@@ -12,7 +12,7 @@ layout: default
     </div>
 
     <div class="philipp person">
-      <img src="/assets/images/avatar-philipp.png" alt="">
+      <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
       <h2>Philipp Schäfer</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
@@ -20,7 +20,7 @@ layout: default
     </div>
 
     <div class="florian person">
-      <img src="/assets/images/avatar-florian.png" alt="">
+      <img src={{ "/assets/images/avatar-florian.png" | relative_url }} alt="">
       <h2>Florian Josef Blank</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
