--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -30,7 +30,7 @@ layout: default
     </div>
 
 
-  <div class="img-show" style="background: url({{ page.image }}); background-size: contain; background-repeat: no-repeat;">
+  <div class="img-show" style="background: url({{ page.image | relative_url }}); background-size: contain; background-repeat: no-repeat;">
   </div>
 </div>
 
