--- a/_layouts/facts.html
+++ b/_layouts/facts.html
@@ -7,7 +7,7 @@ layout: default
       <div class="facts-text">
         {{ content | markdownify }}
       </div>
-        <img class="circus" src="/assets/images/image-drum-circle-set.png" alt="">
+        <img class="circus" src={{ "/assets/images/image-drum-circle-set.png" | relative_url }} alt="">
   </div>
 
   <div class="crdc-map">
