--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -8,11 +8,11 @@ layout: default
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img class="gallery d-block w-100" src="{{ page.first_image }}/800x400?auto=yes&bg=777&fg=555" alt="">
+      <img class="gallery d-block w-100" src="{{ page.first_image | relative_url }}/800x400?auto=yes&bg=777&fg=555" alt="">
     </div>
     {% for images in page.images %}
     <div class="carousel-item">
-      <img class="gallery d-block w-100" src="{{ images.image }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
+      <img class="gallery d-block w-100" src="{{ images.image | relative_url }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
     </div>
     {% endfor %}
 
