bug in css liquid

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -4,7 +4,7 @@ body.home {
         rgba(0, 0, 0, 0.2),
         rgba(0, 0, 0, 0.2)
         ),
-        url(/crdc/assets/images/Backround-home.jpg);
+        url("/crdc/assets/images/Backround-home.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
