typo in font url

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -9,7 +9,7 @@ $happy: 'Henny-Penny';
 
 @font-face {
   font-family: 'Henny-Penny';
-  src: url("/crdc/assets/fonts/HennyPenny-Regular.wof");
+  src: url("/crdc/assets/fonts/HennyPenny-Regular.woff");
 }
 * {
   box-sizing: border-box;
