--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -8,7 +8,7 @@ layout: default
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img class="gallery d-block w-100" src= "{{ page.first_image | relative_url }}/800x400?auto=yes&bg=777&fg=555" | relative_url }} alt="">
+      <img class="gallery d-block w-100" src= "{{ page.first_image | relative_url }}/800x400?auto=yes&bg=777&fg=555" alt="">
     </div>
     {% for images in page.images %}
     <div class="carousel-item">
