rensponsiveness fo iphone

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,6 +19,9 @@
           </div>
         {% endif %}
       {% endfor %}
+      <div class="cta-contact-wrap">
+        <a class="cta contact" href="/contact">CONTACT US</a>
+      </div>
     </div>
   </div>
 </nav>
