--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -126,6 +126,14 @@
   width: 100%;
   padding-top: 100%;
   }
+  //Friends
+  .friends-wrap {
+    grid-template-columns: 100%;
+  }
+  .inner_circle {
+    border-right: none;
+    border-bottom: solid;
+  }
 }
 
 
