contacts page for iphone

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -134,6 +134,15 @@
     border-right: none;
     border-bottom: solid;
   }
+  //Contacts
+  .contact-wrapper, .form-wrap {
+    width: 100%;
+    margin: 2rem auto;
+  }
+  .contact-form {
+    margin-bottom: 3rem;
+  }
+
 }
 
 
