impressum for iphone

--- a/_sass/mobile.scss
+++ b/_sass/mobile.scss
@@ -142,7 +142,11 @@
   .contact-form {
     margin-bottom: 3rem;
   }
-
+  //Impressum
+  .impressum-wrap {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 
