trying to solve darker background di home

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -92,7 +92,7 @@ body.default-background {
 .footer {
   display: block;
   text-align: right;
-  align-self: right;
+  align-self: bottom;
   margin-right: 2rem;
   padding-bottom: 0.5rem;
 }
