--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -13,14 +13,12 @@ layout: default
     </div>
     {% for images in page.images %}
     <div class="carousel-item">
-      <img class="gallery d-block w-100" src= "{{ images.image | relative_url }}/800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="">
-=======
+      <img class="gallery d-block w-100" src= "{{ images.image | relative_url }}" alt="">
       <img class="gallery d-block w-100" src="{{ page.first_image | relative_url }}" alt="">
     </div>
     {% for images in page.images %}
     <div class="carousel-item">
       <img class="gallery d-block w-100" src="{{ images.image | relative_url}}" alt="">
->>>>>>> fix-gallery
     </div>
     {% endfor %}
   </div>
