relative url for facts

--- a/_sass/facts.scss
+++ b/_sass/facts.scss
@@ -19,7 +19,7 @@ img.circus {
   border: solid 3px;
 }
 .crdc-map {
-  background: url(/assets/images/CRDC_MAP.png);
+  background: url(/crdc/assets/images/CRDC_MAP.png);
   width: 80%;
   padding-top: 80%;
   background-size: contain;
