--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header-wrap">
 
-      <a href="{{ baseurl | relative_url }}"><img class="logo" src={{ "/assets/images/crdc-logo.png" | relative_url }} alt=""></a>
+      <a href="{{ site.url | relative_url }}"><img class="logo" src={{ "/assets/images/crdc-logo.png" | relative_url }} alt=""></a>
 
       <div class= "navigation">
         {% include navigation.html %}
