--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
 
         <div class="header-home">
 
-          <a href={{ site.url | append: "/crdc" }}><img class="logo-home" src={{ "assets/images/crdc-logo.png" | relative_url }} alt=""></a>
+          <a href="{{ site.url | append: {{ site.baseurl }} }}"><img class="logo-home" src={{ "assets/images/crdc-logo.png" | relative_url }} alt=""></a>
 
           <div class="languages">
             <div class="cta"><a class="" href={{ "/the-show" | relative_url }}>Tell me more...</a></div>
