sticking footer after content

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -17,6 +17,7 @@ $happy: 'Henny-Penny';
   color: $yellow;
 }
 body {
+  position: relative;
   min-height: 829px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -89,7 +90,7 @@ body.default-background {
  text-transform: uppercase;
  white-space: nowrap;
 }
-.footer {
+a.footer {
   position: absolute;
   bottom: 0;
   right: 17%;
