footer position repaired

--- a/_sass/story.scss
+++ b/_sass/story.scss
@@ -1,7 +1,7 @@
 .story-wrap {
   width: 65%;
   height: min-content;
-  margin: 2rem auto;
+  margin: 0.6rem auto 2rem auto;
   padding: 2rem 4rem;
   background-color: $green;
   border-radius: 1rem;
