--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -1,13 +1,15 @@
 body.home {
   background:
-        linear-gradient(
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2)
-        ),
+  //       linear-gradient(
+  //       rgba(0, 0, 0, 0.2),
+  //       rgba(0, 0, 0, 0.2)
+  //       ),
         url("/crdc/assets/images/Backround-home.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+
 }
 .content-home {
   display: grid;
