--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -59,6 +59,10 @@ strong {
 a.cc-button {
   color: $green !important;
 }
+html, body {
+  margin: 0;
+  height: 100%;
+}
 body.default-background {
   background:    linear-gradient(
       rgba(73, 146, 124, 0.7),
@@ -66,7 +70,6 @@ body.default-background {
       ),
       url("/crdc/assets/images/Backround-default.jpg");
   background-size: cover;
-
 }
 .fas {
   font-size: 2rem;
