changed layouts and includes in all pages for DE

--- a/_includes/header-de.html
+++ b/_includes/header-de.html
@@ -3,7 +3,7 @@
       <a href="{{ site.url | append: site.baseurl }}"><img class="logo" src={{ "/assets/images/crdc-logo.png" | relative_url }} alt=""></a>
 
       <div class= "navigation">
-        {% include navigation.html %}
+        {% include navigation-de.html %}
       </div>
 
   </div>
