--- a/_layouts/default-de.html
+++ b/_layouts/default-de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  {% include head.html %}
+  {% include head-de.html %}
   <body class="default-background">
-    {% include header.html %}
+    {% include header-de.html %}
     {{ content }}
-    {% include footer.html %}
+    {% include footer-de.html %}
   </body>
 </html>
