--- a/_layouts/gallery-de.html
+++ b/_layouts/gallery-de.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default-de
 ---
 
 
@@ -36,4 +36,4 @@ layout: default
 
 <!-- Script for gallery carousel -->
 
-{% include navigation-show.html %}
+{% include navigation-show-de.html %}
