--- a/_layouts/story-de.html
+++ b/_layouts/story-de.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default-de
 ---
 <div class="story-wrap">
   <div class="story-content-wrap">
@@ -23,7 +23,7 @@ layout: default
 
       </div>
     </div>
-    
+
   </div>
 
 
