--- a/_layouts/video-de.html
+++ b/_layouts/video-de.html
@@ -5,4 +5,4 @@ layout: default
   <iframe class="video-show" src="{{ page.video-link }}?rel=0;&autoplay=1" frameborder="0" allow="accelerometer; autoplay;" allowfullscreen></iframe>
 </div>
 
-{% include navigation-show.html%}
+{% include navigation-show-de.html%}
