--- a/_includes/navigation-de.html
+++ b/_includes/navigation-de.html
@@ -20,7 +20,7 @@
         {% endif %}
       {% endfor %}
       <div class="cta-contact-wrap">
-        <a class="cta contact" href="{{ "/contact" | relative_url}}">CONTACT US</a>
+        <a class="cta contact" href="{{ "/de/contact" | relative_url}}">CONTACT US</a>
       </div>
     </div>
   </div>
