--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: default-de
 ---
 <div class="show-wrapper">
   <div class="table-wrap">
@@ -35,5 +35,5 @@ layout: default
 </div>
 
 
-{% include navigation-show.html %}
+{% include navigation-show-de.html %}
 <!--  is my profile picture online? -->
