--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,8 @@
           <a href="{{ site.url | append: site.baseurl }}"><img class="logo-home" src={{ "assets/images/crdc-logo.png" | relative_url }} alt=""></a>
 
           <div class="languages">
-            <div class="cta"><a class="" href={{ "/the-show" | relative_url }}>Tell me more...</a></div>
-            <div class="cta"><a class="" href={{ "/the-show" | relative_url }}>Mehr Anzeigen...</a></div>
+            <div class="cta"><a class="" href={{ "/en/the-show" | relative_url }}>Tell me more...</a></div>
+            <div class="cta"><a class="" href={{ "/de/the-show" | relative_url }}>Mehr Anzeigen...</a></div>
           </div>
 
         </div>
