changed layouts for pages in DE

--- a/_includes/navigation-de.html
+++ b/_includes/navigation-de.html
@@ -4,7 +4,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      {% for item in site.data.navigation %}
+      {% for item in site.data.navigation-de %}
         {% if page.url contains item.link %}
           <div class="menu-item">
             <a class="menu-item active" href="{{ item.link | relative_url }}">
