fixed action figures in Team

--- a/_layouts/team-de.html
+++ b/_layouts/team-de.html
@@ -27,7 +27,7 @@ layout: default-de
       <p>{{ page.florian }}</p>
     </div>
 
-    <img class="action-figure berta" src="../assets/images/berta-in-action.png" alt="">
-    <img class="action-figure philipp" src="../assets/images/philipp-in-action.png" alt="">
-    <img class="action-figure flo" src="../assets/images/florian-in-action.png" alt="">
+    <img class="action-figure berta" src="../..//assets/images/berta-in-action.png" alt="">
+    <img class="action-figure philipp" src="../../assets/images/philipp-in-action.png" alt="">
+    <img class="action-figure flo" src="../../assets/images/florian-in-action.png" alt="">
   </div>
