--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -5,7 +5,7 @@ layout: default
   <div class="team">
     <div class="berta person">
       <img src={{ "/assets/images/avatar-berta.png" | relative_url }} alt="">
-      <h2>Berta Del Ben</h2>
+      <h2>Roberta Del Ben</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.berta }}</p>
@@ -14,16 +14,16 @@ layout: default
     <div class="philipp person">
       <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
       <h2>Philipp Schäfer</h2>
-      <h4>Italy</h4>
-      <h3>Actress and Theatre-Maker</h3>
+      <h4>Germany</h4>
+      <h3>Music Clown</h3>
       <p>{{ page.philipp }}</p>
     </div>
 
     <div class="florian person">
       <img src={{ "/assets/images/avatar-florian.png" | relative_url }} alt="">
       <h2>Florian Josef Blank</h2>
-      <h4>Italy</h4>
-      <h3>Actress and Theatre-Maker</h3>
+      <h4>Germany</h4>
+      <h3>Multi-Instrumentalist</h3>
       <p>{{ page.florian }}</p>
     </div>
 
