--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -98,6 +98,7 @@ position: absolute;
 right: 17%;
 bottom: 0;
 margin-bottom: 0.5rem;
+font-size: 10px;
 }
 a.footer:hover {
   color: $yellow !important;
