corrected philipp's surname

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -13,7 +13,7 @@ layout: default
 
     <div class="philipp person">
       <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
-      <h2>Philipp Schäfer</h2>
+      <h2>Philipp Schaefer</h2>
       <h4>Germany</h4>
       <h3>Music Clown</h3>
       <p>{{ page.philipp }}</p>
