--- a/_layouts/team-de.html
+++ b/_layouts/team-de.html
@@ -13,7 +13,7 @@ layout: default-de
 
     <div class="philipp person">
       <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
-      <h2>Philipp Schäfer</h2>
+      <h2>Philipp Schaefer</h2>
       <h4>Italy</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.philipp }}</p>
