country of provenience

--- a/_layouts/team-de.html
+++ b/_layouts/team-de.html
@@ -14,7 +14,7 @@ layout: default-de
     <div class="philipp person">
       <img src={{ "/assets/images/avatar-philipp.png" | relative_url }} alt="">
       <h2>Philipp Schaefer</h2>
-      <h4>Italy</h4>
+      <h4>Germany</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.philipp }}</p>
     </div>
@@ -22,7 +22,7 @@ layout: default-de
     <div class="florian person">
       <img src={{ "/assets/images/avatar-florian.png" | relative_url }} alt="">
       <h2>Florian Josef Blank</h2>
-      <h4>Italy</h4>
+      <h4>Germany</h4>
       <h3>Actress and Theatre-Maker</h3>
       <p>{{ page.florian }}</p>
     </div>
