--- a/_layouts/contact-de.html
+++ b/_layouts/contact-de.html
@@ -6,8 +6,8 @@ layout: default-de
   <div class="contacts">
     <h2>{{ page.contact-name }}</h2>
     <p>{{ page.telephone }}</p>
-    <p>{{ page.e-mail }}</p>
-    <a href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
+    <a href="mailto:{{ page.email }}">{{ page.e-mail }}</a>
+    <a target="_blank" href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
   <div class="form-wrap">
