contact email in paragraph

--- a/_layouts/contact-de.html
+++ b/_layouts/contact-de.html
@@ -6,7 +6,7 @@ layout: default-de
   <div class="contacts">
     <h2>{{ page.contact-name }}</h2>
     <p>{{ page.telephone }}</p>
-    <a href="mailto:{{ page.email }}">{{ page.e-mail }}</a>
+    <p><a href="mailto:{{ page.email }}">{{ page.e-mail }}</a></p>
     <a target="_blank" href="https://www.facebook.com/CrazyRumbleDrumCircus/?ref=br_rs"><i class="fab fa-facebook-f"></i></a>
   </div>
 
