--- a/_sass/facts.scss
+++ b/_sass/facts.scss
@@ -10,19 +10,12 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-
-
-img.circus {
-  width: 400px;
-  margin-top: 2em;
-  border-color: $yellow;
-  border: solid 3px;
-}
 .crdc-map {
-  background: url(/crdc/assets/images/CRDC_MAP.png);
-  width: 80%;
-  padding-top: 80%;
+  background: url(/crdc/assets/images/image-drum-circle-set.png);
+  width: 90%;
+  padding-top: 9/16 * 90%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  border: solid $yellow;
 }
