fixed impressum link and some layout in show

--- a/_layouts/the-show-de.html
+++ b/_layouts/the-show-de.html
@@ -22,8 +22,13 @@ layout: default-de
 
           <tr>
             <td class="expectations"><p>{{ page.expectation_3_en | markdownify }}</p></td>
-            <td class="statement"><p>{{ page.offer_3_en | markdownify }}</p></td>
           </tr>
+
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
 
         </tbody>
       </table>
