--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -61,7 +61,15 @@ a.cc-button {
 }
 html, body {
   margin: 0;
+}
+html {
   height: 100%;
+}
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  justify-content: center;
 }
 body.default-background {
   background:    linear-gradient(
@@ -93,12 +101,16 @@ body.default-background {
  text-transform: uppercase;
  white-space: nowrap;
 }
+div.footer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
 a.footer {
-position: absolute;
-right: 17%;
-bottom: 0;
-margin-bottom: 0.5rem;
-font-size: 10px;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  margin-bottom: 0.5rem;
+  font-size: 10px;
 }
 a.footer:hover {
   color: $yellow !important;
