--- a/_layouts/the-show.html
+++ b/_layouts/the-show.html
@@ -51,5 +51,5 @@ layout: default
 </div>
 
 
-{% include navigation-show-de.html %}
+{% include navigation-show.html %}
 <!--  is my profile picture online? -->
