--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,9 +1,10 @@
 .header-wrap {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
 }
 .logo {
-  width: 15rem;
+  width: 10rem;
   margin-left: 4rem;
   margin-top: 2em;
 }
@@ -21,7 +22,6 @@
   height: 27%;
   justify-self: center;
   align-self: center;
-  margin-top: 1rem;
 }
 .navigation-wrap {
   display: flex;
@@ -41,12 +41,12 @@
 .menu-item {
   text-align: center;
   margin: 0 1.5em;
-  font-size: 18px;
+  font-size: 15px;
   white-space: nowrap;
   padding-top: 0.8em;
 }
 .menu-item.active {
-font-size: 23px;
+font-size: 18px;
 font-weight: 900;
 text-decoration: underline;
 }
