fixed links in navigation show de

--- a/_includes/navigation-show-de.html
+++ b/_includes/navigation-show-de.html
@@ -4,7 +4,7 @@
 
   <div class="show-navigation">
 
-    {% for item in site.data.navigation-show %}
+    {% for item in site.data.navigation-show-de %}
       {% if page.url == item.link %}
         <a class="active-button-show" href="{{ item.link | relative_url }}">{{ item.name }}</a>
 
