--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,6 @@
 .header-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
 }
 .logo {
   width: 10rem;
