changes in show

--- a/_sass/show.scss
+++ b/_sass/show.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-items: center;
   width: 100%;
-  margin-top: -2rem;
+  // margin-top: -2rem;
 }
 .expectations {
   text-align: right;
