arrows in gallery closer to image

--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -4,4 +4,8 @@
 }
 .carousel-control-next-icon {
   color: $yellow;
+  margin-left: -20rem;
+}
+.carousel-control-prev-icon {
+  margin-right: -20rem;
 }
