--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -36,7 +36,8 @@ h1.center-title {
 }
 h2{
   font-size: 20px;
-  font-weight: 900;
+  font-weight: 400;
+  text-decoration: underline;
 }
 h3 {
   font-weight: 900;
