--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -4,18 +4,36 @@ layout: default
 <div class="friends-wrap">
   <div class="inner_circle">
     <h1>Inner Circle</h1>
-      {% for inner_circle in page.inner_circle %}
+
     <div class="friend">
       <img src="{{ inner_circle.logo | relative_url }}" alt=""/>
       <h2>{{ inner_circle.person-name }}</h2>
-      <p>{{ inner_circle.person-role}}</p>
+      <p>{{ inner_circle.website}}</p>
     </div>
-    {%endfor%}
+
+    <div class="friend">
+      <img src="{{ inner_circle.logo | relative_url }}" alt=""/>
+      <h2>{{ inner_circle.person-name }}</h2>
+      <p>{{ inner_circle.website}}</p>
+    </div>
+
+    <div class="friend">
+      <img src="{{ inner_circle.logo | relative_url }}" alt=""/>
+      <h2>{{ inner_circle.person-name }}</h2>
+      <p>{{ inner_circle.website}}</p>
+    </div>
+
+    <div class="friend">
+      <img src="{{ inner_circle.logo | relative_url }}" alt=""/>
+      <h2>{{ inner_circle.person-name }}</h2>
+      <p>{{ inner_circle.website}}</p>
+    </div>
+
   </div>
 
   <div class="network">
-    <h1>Network</h1>
-    {% for network in page.network %}
+    <h1>Outer Circle</h1>
+
     <div class="network-person">
       <img src="{{ network.logo }}" alt=""/>
       <h2>{{ network.person-name }}</h2>
