--- a/_layouts/friends-de.html
+++ b/_layouts/friends-de.html
@@ -4,23 +4,50 @@ layout: default-de
 <div class="friends-wrap">
   <div class="inner_circle">
     <h1>Inner Circle</h1>
-      {% for inner_circle in page.inner_circle %}
-    <div class="friend">
-      <img src="{{ inner_circle.logo | relative_url }}" alt=""/>
-      <h2>{{ inner_circle.person-name }}</h2>
-      <p>{{ inner_circle.person-role}}</p>
+
+    <div>
+      <h2>Construction and Metal Work</h2>
+        <ul>
+          <li> <a href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></li>
+        </ul>
     </div>
-    {%endfor%}
+
+    <div>
+      <h2>Instruments</h2>
+        <ul>
+          <li> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </li>
+          <li> <a href="www.remo.com">www.remo.com</a> <img src="/uploads/Remo-Logo.png" alt=""> </li>
+        </ul>
+    </div>
+    <!-- <h2>Beratung</h2>
+      <ul>
+        <li>Angharad Matthews</li>
+      </ul> -->
+    <div>
+      <h2>Graphic Design and Printing</h2>
+        <ul>
+          <li> <a href="www.druckerei-breiden.de">www.druckerei-breiden.de</a> </li>
+        </ul>
+    </div>
+
+    <div>
+      <h2>Fotos/Video/Website</h2>
+        <ul>
+          <li> Chris Mersmann, Lukas Papierak - <a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </li>
+          <li> Nevermiss Productions<a href="www.nevermiss.de"></a> </li>
+          <li> Matteo Carpi<a href="#"></a> </li>
+
+        </ul>
+    </div>
   </div>
 
   <div class="network">
-    <h1>Network</h1>
-    {% for network in page.network %}
-    <div class="network-person">
-      <img src="{{ network.logo }}" alt=""/>
-      <h2>{{ network.person-name }}</h2>
-      <p>{{ network.person-role}}</p>
-    </div>
-    {%endfor%}
+    <h1>Outer Circle</h1>
+      <ul>
+        <li class="outer-friend"> <a href="www.theatre-pikante.de">www.theatre-pikante.de</a> </li>
+        <li class="outer-friend"> <a href="www.memo-media.de">www.memo-media.de</a> </li>
+        <li class="outer-friend"> <a href="www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </li>
+        <li class="outer-friend"> <a href="www.villagemusiccircles.com">www.villagemusiccircles.com</a> </li>
+      </ul>
   </div>
 </div>
