--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -5,31 +5,49 @@ layout: default
   <div class="inner_circle">
     <h1>Inner Circle</h1>
 
-    <h2>Construction and Metal Work</h2>
-      <ul>
-        <li> <a href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></li>
-      </ul>
+    <div>
+      <h2>Construction and Metal Work</h2>
+        <ul>
+          <li> <a href="http://www.daniel-weissroth.de/">www.daniel-weissroth.de</a></li>
+        </ul>
+    </div>
 
-    <h2>Instruments</h2>
-      <ul>
-        <li> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </li>
-        <li> <a href="www.remo.com">www.remo.com</a> </li>
-      </ul>
-
+    <div>
+      <h2>Instruments</h2>
+        <ul>
+          <li> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </li>
+          <li> <a href="www.remo.com">www.remo.com</a> <img src="/uploads/Remo-Logo.png" alt=""> </li>
+        </ul>
+    </div>
     <!-- <h2>Beratung</h2>
       <ul>
         <li>Angharad Matthews</li>
       </ul> -->
+    <div>
+      <h2>Graphic Design and Printing</h2>
+        <ul>
+          <li> <a href="www.druckerei-breiden.de">www.druckerei-breiden.de</a> </li>
+        </ul>
+    </div>
 
-    <h2>Graphic Design and Printing</h2>
-      <ul>
-        <li> <a href="www.druckerei-breiden.de">www.druckerei-breiden.de</a> </li>
-      </ul>
+    <div>
+      <h2>Fotos/Video/Website</h2>
+        <ul>
+          <li> Chris Mersmann, Lukas Papierak - <a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </li>
+          <li> Nevermiss Productions<a href="www.nevermiss.de"></a> </li>
+          <li> Matteo Carpi<a href="#"></a> </li>
 
-    
+        </ul>
+    </div>
   </div>
 
   <div class="network">
-    <h1>Network</h1>
+    <h1>Outer Circle</h1>
+      <ul>
+        <li class="outer-friend"> <a href="www.theatre-pikante.de">www.theatre-pikante.de</a> </li>
+        <li class="outer-friend"> <a href="www.memo-media.de">www.memo-media.de</a> </li>
+        <li class="outer-friend"> <a href="www.gewa-drumcircles.com">www.gewa-drumcircles.com</a> </li>
+        <li class="outer-friend"> <a href="www.villagemusiccircles.com">www.villagemusiccircles.com</a> </li>
+      </ul>
   </div>
 </div>
