--- a/_sass/friends.scss
+++ b/_sass/friends.scss
@@ -15,7 +15,8 @@
   }
 }
 .inner_circle {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-items: center;
   align-items: center;
   margin-top: 3rem;
@@ -24,12 +25,23 @@
   h1 {
     width: max-content;
     padding: 0 1rem;
+    margin-bottom: 4rem;
     border: solid 2px;
+  }
+  div {
+    margin-bottom: 2rem;
+    li {
+      margin-bottom: 1rem;
+    }
   }
 }
 .network {
   margin-top: 3rem;
   h1 {
     border: solid 2px;
+    margin-bottom: 4rem;
   }
+}
+li.outer-friend {
+  margin-bottom: 2rem;
 }
