finished up friends page in both lang

--- a/_layouts/friends.html
+++ b/_layouts/friends.html
@@ -16,7 +16,7 @@ layout: default
       <h2>Instruments</h2>
         <ul>
           <li> <a target="_blank" href="www.gewamusic.com">www.gewamusic.com</a> </li>
-          <li> <a href="www.remo.com">www.remo.com</a> <img src="/uploads/Remo-Logo.png" alt=""> </li>
+          <li> <a href="www.remo.com">www.remo.com</a> <br><img class="remo" src="/crdc/uploads/Remo-Logo.png" alt=""> </li>
         </ul>
     </div>
     <!-- <h2>Beratung</h2>
@@ -33,7 +33,7 @@ layout: default
     <div>
       <h2>Fotos/Video/Website</h2>
         <ul>
-          <li> Chris Mersmann, Lukas Papierak - <a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </li>
+          <li> Chris Mersmann, Lukas Papierak <br><a href="www.lukas-papierak.de"> www.lukas-papierak.de </a> </li>
           <li> Nevermiss Productions<a href="www.nevermiss.de"></a> </li>
           <li> Matteo Carpi<a href="#"></a> </li>
 
