centered header in de

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,5 +23,6 @@
         <div class="cta-contact-wrap">
           <a class="cta contact" href="{{ "/en/contact" | relative_url}}">CONTACT US</a>
         </div>
+      </div>
   </nav>
 </div>
