--- a/_includes/navigation-de.html
+++ b/_includes/navigation-de.html
@@ -1,27 +1,28 @@
-<nav class="navigation navbar text-center navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler text-center ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      {% for item in site.data.navigation-de %}
-        {% if page.url contains item.link %}
-          <div class="menu-item">
-            <a class="menu-item active" href="{{ item.link | relative_url }}">
-              {{ item.name }}
-            </a>
-          </div>
-        {% else %}
-          <div class="menu-item">
-            <a class="menu-item" href="{{ item.link | relative_url }}">
-              {{ item.name }}
-            </a>
-          </div>
-        {% endif %}
-      {% endfor %}
-      <div class="cta-contact-wrap">
-        <a class="cta contact" href="{{ "/de/contact" | relative_url}}">CONTACT US</a>
+<div class="navigation-wrap">
+  <nav class="navigation navbar text-center navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler text-center ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        {% for item in site.data.navigation-de %}
+          {% if page.url contains item.link %}
+            <div class="menu-item">
+              <a class="menu-item active" href="{{ item.link | relative_url }}">
+                {{ item.name }}
+              </a>
+            </div>
+          {% else %}
+            <div class="menu-item">
+              <a class="menu-item" href="{{ item.link | relative_url }}">
+                {{ item.name }}
+              </a>
+            </div>
+          {% endif %}
+        {% endfor %}
+        <div class="cta-contact-wrap">
+          <a class="cta contact" href="{{ "/de/contact" | relative_url}}">CONTACT US</a>
+        </div>
       </div>
-    </div>
-  </div>
-</nav>
+  </nav>
+</div>
